# job-search-automation

./: .gitignore  AGENTS.md  AUTOMATION_READY.md  CHECKLIST.md  DEPENDENCY_FIX.md  QUICK_START.md  README.md  README_AUTOMATION.md  SCHEDULER_SETUP.md  SETUP_COMPLETE.md  START_HERE.md  copy_to_desktop.bat  pyproject.toml  requirements.txt  start_scheduler.bat  start_scheduler.ps1
.github/workflows/: approved_apply.yml  daily_job.yml
knowledge/: job_sources.txt  user_preference.txt
scripts/: test_serper.py  test_serper2.py
src/canadian_hr_job_search_assistant/: crew.py  email_utils.py  main.py  scheduler.py
src/canadian_hr_job_search_assistant/config/: agents.yaml  tasks.yaml
src/canadian_hr_job_search_assistant/tools/: custom_tool.py
