[project]
name = "canadian_hr_job_search_assistant"
version = "0.1.0"
description = "canadian_hr_job_search_assistant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[file-processing,litellm,tools]==1.14.4",
    "schedule>=1.2.0",
]

[project.scripts]
canadian_hr_job_search_assistant = "canadian_hr_job_search_assistant.main:run"
run_crew = "canadian_hr_job_search_assistant.main:run"
train = "canadian_hr_job_search_assistant.main:train"
replay = "canadian_hr_job_search_assistant.main:replay"
test = "canadian_hr_job_search_assistant.main:test"
run_with_trigger = "canadian_hr_job_search_assistant.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
